# fullstack-ai-marketing-platform

./: vercel.json
asset-processing-service/: .gitignore  Dockerfile  pyproject.toml
asset-processing-service/asset_processing_service/: .cursorrules  api_client.py  config.py  job_processor.py  main.py  media_instructions.txt  media_processor.py  models.py
asset-processing-service/asset_processing_service/constants/: job_status.py
nextjs/: .gitignore  drizzle.config.ts  middleware.ts  package-lock.json  package.json
nextjs/app/: layout.tsx  page.tsx
nextjs/app/(dashboard)/: layout.tsx
nextjs/app/(dashboard)/project/[projectId]/: page.tsx
nextjs/app/(dashboard)/template/[templateId]/: page.tsx
nextjs/app/api/asset-processing-job/: route.ts
nextjs/app/api/asset-processing-job/[jobId]/: route.ts
nextjs/app/api/asset/[assetId]/: route.ts
nextjs/app/api/projects/[projectId]/: route.ts
nextjs/app/api/projects/[projectId]/asset-processing-jobs/: route.ts
nextjs/app/api/projects/[projectId]/assets/: route.ts
nextjs/app/api/upload/: route.ts
nextjs/components/: Sidebar.tsx  SidebarClaude.tsx
nextjs/constants/: http.ts
nextjs/server/: mutation.ts  queries.ts
nextjs/server/db/: index.ts
nextjs/utils/: sidebarUtils.ts
