[tool.poetry]
name = "asset-processing-service"
version = "0.1.0"
description = ""
authors = ["Dmitry <dima.avramenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.11.10"
python-dotenv = "^1.0.1"
pydantic = "^2.10.3"

[tool.poetry.scripts]
asset-processing-service = "asset_processing_service.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
